<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationRecorder</string>
    <string name="LocationInfo">LocationInformation:</string>
    <string name="Location"></string>
    <string name="SatelliteInfo">SatelliteInfo: </string>
    <string name="AverageSpeedInfo">Average Speed: </string>
    <string name="InstanceSpeedInfo">Instance Speed: </string>
    <string name="RecordTimeInfo">Total Time: </string>
    <string name="DistanceInfo">Distance: </string>
    <string name="LocationStart">Start</string>
    <string name="LocationShow">Show</string>
    <string name="UnKnowLocationInfo">Can\'t get any location, please wait...</string>
    <string name="action_settings">Settings</string>
    <string name="NULL"></string>

    <string name="settings_label">Settings…</string>

    <string name="preferenceMusicSettingTitle">Music</string>

    <string name="backgroundMusicEnable">Background Music Enable</string>
    <string name="backgroundMusicSummary">Play background music</string>

    <string name="backgroundMusicLocationDefault">internal</string>
    <string name="backgroundMusicLocationDialog">setting music location</string>
    <string name="backgroundMusicLocation">Music Location Selection</string>

    <string name="preferenceMusicSelect">Select Music to play</string>
    <string name="preferenceMusicSelectSummary">Please choose the background music</string>

    <string name="preferenceMinDistanceSelect">Select GPS Distance Change To Update</string>
    <string name="preferenceMinDistanceSummary">Minimum GPS Distance Change To Update</string>

    <string name="preferenceGPSSettingTitle">GPS</string>

    <string name="preferenceGPSUpdateTime">Select Time To Update GPS</string>
    <string name="preferenceGPSUpdateTimeSummary">Minimum Time Interval To Update GPS</string>

    <string name="preferenceGPSUpdateDistance">Select Distance To Update GPS</string>
    <string name="preferenceGPSUpdateDistanceSummary">Minimum Distance Interval To Update GPS</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_startup">LocationRecorder</string>

</resources>
