<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ctrl.supera.locationrecorder.gpsHeaderListFragment">

    <LinearLayout
        android:id="@+id/FrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/GpsTextInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/LocationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LocationInfo" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/LocationInfo"
                android:layout_toRightOf="@id/LocationInfo"
                android:text="@string/Location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/HeaderItemLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SatelliteInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SatelliteInfo" />

            <TextView
                android:id="@+id/AverageSpeedInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AverageSpeedInfo" />

            <TextView
                android:id="@+id/InstanceSpeedInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InstanceSpeedInfo" />

            <TextView
                android:id="@+id/RecordTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RecordTimeInfo" />

            <TextView
                android:id="@+id/DistanceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DistanceInfo" />

            <ListView
                android:id="@+id/GpsDatabaseInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/LocationStart"
                android:layout_below="@+id/SatelliteInfo"
                android:layout_weight="1" />

            <Button
                android:id="@+id/LocationStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/LocationStart" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
