<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GpsTextInformation"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/LocationInfo"
            android:id="@+id/LocationInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/Location"
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/LocationInfo"
            android:layout_toRightOf="@id/LocationInfo" />
    </LinearLayout>


    <TextView
        android:text="@string/SatelliteInfo"
        android:id="@+id/SatelliteInfo"
        android:layout_below="@+id/GpsTextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GpsDatabaseInformation"
        android:layout_below="@+id/SatelliteInfo"
        android:layout_above="@+id/ControlButtonLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/ControlButtonLayout"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocationStart"
            android:id="@+id/LocationStart" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocationShow"
            android:id="@+id/LocationShow" />

    </LinearLayout>

</RelativeLayout>
